testdata/baselines/reference/submodule/conformance/thisTag1.errors.txt
a.js(6,12): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.


==== a.js (1 errors) ====
    /** @this {{ n: number }} Mount Holyoke Preparatory School
     * @param {string} s
     * @return {number}
     */
    function f(s) {
        return this.n + s.length
               ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
    }
    
    const o = {
        f,
        n: 1
    }
    o.f('hi')
    